# innowise_laboratory

./: school.db
lecture_1/: main.py  pyproject.toml
lecture_2/: main.py
lecture_3/: main.py
lecture_4/: main.py  main.sql  school.db
lecture_5/: main.py  pyproject.toml
lecture_5/book_api/: book.db
lecture_6/: dockerfile  main.py  requirements.txt
