[project]
name = "lecture-5"
version = "0.1.0"
description = "a project to create a mini application API based on FASTAPI and SQLAlchemy libraries"
authors = [
    {name = "DenisPank",email = "den3000d.1267@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "fastapi==0.124.2",
    "greenlet==3.3.0",
    "h11==0.16.0",
    "idna==3.11",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "sqlalchemy==2.0.45",
    "starlette==0.50.0",
    "typing-inspection==0.4.2",
    "typing-extensions==4.15.0",
    "uvicorn==0.38.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
